--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,12 @@ html
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
       .navbar-brand Wordbook
+
+      ul.navbar-nav.ml-auto
+        - if current_user
+          li.nav-item= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link'
+        - else
+          li.nav-item= link_to 'ログイン', new_user_session_path, class: 'nav-link'
+          li.nav-item= link_to 'アカウント登録', new_user_registration_path, class: 'nav-link'
     .container
       = yield
