Add create book method

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,2 +1,3 @@
-h1 Books#index
-p Find me in app/views/books/index.html.slim
+h1 = Book.model_name.human
+
+= link_to Book.human_attribute_name(:new_book), new_book_path, class: 'btn btn-primary'
