--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,4 +18,6 @@ html
           li.nav-item= link_to 'ログイン', new_user_session_path, class: 'nav-link'
           li.nav-item= link_to 'アカウント登録', new_user_registration_path, class: 'nav-link'
     .container
+      - if flash.notice.present?
+        .alert.alert-success= flash.notice
       = yield
