--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -21,7 +21,7 @@ table.table.table-hover
         tr
           td= word.name
           td= word.description
-          td= link_to Word.human_attribute_name(:delete), nil, method: :delete, data: { confirm: Word.human_attribute_name(:delete_confirm, word: word.name) }, class: 'btn btn-danger'
+          td= link_to Word.human_attribute_name(:delete), word, method: :delete, data: { confirm: Word.human_attribute_name(:delete_confirm, word: word.name) }, class: 'btn btn-danger'
       tr
         = form_with model: @new_word, local: true do |f|
           td= f.text_field :name, class: 'form-control', id: 'word_name'
